--- a/examples/debugging/Cargo.toml
+++ b/examples/debugging/Cargo.toml
@@ -10,7 +10,8 @@ repository = "https://github.com/FuelLabs/fuels-rs"
 description = "Fuel Rust SDK debugging examples."
 
 [dependencies]
-fuel-abi-types = "0.2.0"
+# TODO: revert this
+fuel-abi-types = { git = "https://github.com/FuelLabs/fuel-abi-types", branch = "hal3e-segfault-magnet/independent_fn_sel_resolving" }
 fuels = { workspace = true }
 rand = "0.8.5"
 tokio = { version = "1.10", features = ["full"] }
