--- a/packages/fuels-types/Cargo.toml
+++ b/packages/fuels-types/Cargo.toml
@@ -17,7 +17,8 @@ chrono = "0.4.2"
 fuel-tx = { workspace = true }
 fuel-types = { workspace = true }
 fuel-asm = { workspace = true }
-fuel-abi-types = { workspace = true }
+# TODO: revert this
+fuel-abi-types = { git = "https://github.com/FuelLabs/fuel-abi-types", branch = "hal3e-segfault-magnet/independent_fn_sel_resolving" }
 fuel-core = { workspace = true, default-features = false, optional = true }
 fuel-core-chain-config = { workspace = true, default-features = false }
 fuel-core-client = { workspace = true, default-features = false, optional = true }
